[package]
name = "nvidia-gamestream-presets-tool"
version = "0.0.1"
edition = "2021"
authors = ["Uklosk <jomai92@gmail.com>"]
description = "Create NVIDIA GameStream Presets from Steam Shortcuts. Useful with SteamRomManager"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Uklosk/nvidia-gamestream-presets-tool"
repository = "https://github.com/Uklosk/nvidia-gamestream-presets-tool"

[dependencies]
steam_shortcuts_util = "1.1.8"
mslnk = "0.1.8"
clap = "3.2.6"
image = "0.24.2"
rust-ini = "0.18.0"
